return public id instead sequential number
